init: start shelter-part 3 task

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -85,19 +85,23 @@
   color: #292929;
 }
 
-.round-button_disabled {
-  color: #cdcdcd;
-  border: 2px solid #cdcdcd;
-  color: #cdcdcd;
-}
-
 .round-button:hover {
   cursor: pointer;
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
 }
 
 .round-button_static {
-  background-color: #F1CDB3;
+  background-color: #f1cdb3;
+}
+
+.round-button_disabled {
+  color: #cdcdcd;
+  border: 2px solid #cdcdcd;
+}
+
+.round-button_disabled:hover {
+  cursor: default;
+  background-color: transparent;
 }
 
 html {
@@ -110,6 +114,10 @@ html {
   font-weight: 400;
   line-height: 160%;
   color: #4c4c4c;
+}
+
+body {
+  height: 100vh;
 }
 
 .wrapper {
@@ -158,6 +166,7 @@ html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -189,6 +198,16 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  z-index: 6;
+  -webkit-transition: all 3s;
+  transition: all 3s;
+}
+
+@media (max-width: 767px) {
+  .header__logo_active {
+    position: absolute;
+    right: 126px;
+  }
 }
 
 .header__title {
@@ -234,19 +253,16 @@ html {
 }
 
 @media (max-width: 767px) {
-  .header__menu {
-    display: none;
-  }
-}
-
-@media (max-width: 767px) {
   .header__burger {
     margin-right: 43px;
   }
 }
 
 .burger {
+  z-index: 5;
   display: none;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
 }
 
 @media (max-width: 767px) {
@@ -270,6 +286,50 @@ html {
     height: 2px;
     background-color: #f1cdb3;
   }
+  .burger_active {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    position: absolute;
+    right: 58px;
+    margin-right: 0;
+  }
+}
+
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+.hidden {
+  overflow: hidden;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    -webkit-transform: translate(100%, 0);
+            transform: translate(100%, 0);
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    right: 0;
+    width: 320px;
+    height: 100vh;
+    overflow: auto;
+    background-color: #262425;
+    padding: 248px 38px 0 38px;
+    overflow: auto;
+    -webkit-transition: -webkit-transform 0.8s ease 0s;
+    transition: -webkit-transform 0.8s ease 0s;
+    transition: transform 0.8s ease 0s;
+    transition: transform 0.8s ease 0s, -webkit-transform 0.8s ease 0s;
+  }
+  .menu_active {
+    -webkit-transform: translate(0px, 0%);
+            transform: translate(0px, 0%);
+  }
 }
 
 .menu__list {
@@ -285,6 +345,15 @@ html {
   list-style: none;
 }
 
+@media (max-width: 767px) {
+  .menu__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .menu__item {
   margin-left: 35px;
 }
@@ -292,6 +361,16 @@ html {
 .menu__item:first-child a {
   padding-bottom: 3px;
   border-bottom: 3px solid #f1cdb3;
+}
+
+@media (max-width: 767px) {
+  .menu__item {
+    font-family: "Arial";
+    font-size: 32px;
+    line-height: 160%;
+    margin-left: 0;
+    margin-bottom: 40px;
+  }
 }
 
 .menu__link {
@@ -304,12 +383,21 @@ html {
   /* identical to box height, or 24px */
   /* color-dark-s */
   color: #cdcdcd;
-  -webkit-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
 }
 
 .menu__link:hover {
   cursor: pointer;
+}
+
+@media (max-width: 767px) {
+  .menu__link {
+    font-family: "Arial";
+    font-size: 32px;
+    line-height: 160%;
+    color: #fafafa;
+  }
 }
 
 .start-screen {
