--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+ 
+  height: 100vh;
 }
 
 .wrapper {
@@ -59,6 +61,7 @@ $bp5: 320;
 
   &__container {
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
     height: 60px;
@@ -73,8 +76,18 @@ $bp5: 320;
   }
   // .header__logo
   &__logo {
+    
     display: flex;
     flex-direction: column;
+    z-index: 6;
+    transition: all 3s;
+    @media (max-width: $bp4+px) {
+      
+      &_active {
+        position: absolute;
+        right: 126px; 
+      }
+    }
   }
   // .header__title
   &__title {
@@ -113,9 +126,6 @@ $bp5: 320;
   // .header__menu
   &__menu {
     margin-left: auto;
-    @media (max-width: $bp4+px) {
-      display: none;
-    }
   }
   &__burger {
     @media (max-width: $bp4+px) {
@@ -125,7 +135,9 @@ $bp5: 320;
 }
 
 .burger {
+  z-index: 5;
   display: none;
+  transition: all 0.8s;
   @media (max-width: $bp4+px) {
     width: 30px;
     height: 22px;
@@ -140,20 +152,58 @@ $bp5: 320;
       height: 2px;
       background-color: #f1cdb3;
     }
+    
+  &_active {
+     transform: rotate(90deg);
+      position: absolute;
+      right: 58px;
+      margin-right: 0; 
   }
+  
+}
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+}
+
+.hidden {
+  overflow: hidden;
 }
 
 .menu {
   // .menu__list
+  @media (max-width: $bp4+px) {
+    transform: translate(100%, 0);
+    box-sizing: border-box;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    right: 0;
+    
+    width: 320px;
+    height: 100vh;
+    overflow: auto;
+    background-color: #262425;
+    padding: 248px 38px 0 38px;
+    overflow: auto;
+    
+    transition: transform 0.8s ease 0s;
+    
+   
+    &_active {
+      transform: translate(0px, 0%);
+    }
+  }
   &__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
     list-style: none;
-    // *:first-child {
-
-    // }
-    // flex-direction: column;
+    @media (max-width: $bp4+px) {
+      flex-direction: column;
+    }
   }
 
   // .menu__item
@@ -162,6 +212,14 @@ $bp5: 320;
     &:first-child a {
       padding-bottom: 3px;
       border-bottom: 3px solid #f1cdb3;
+    }
+    @media (max-width: $bp4+px) {
+      font-family: "Arial";
+
+      font-size: 32px;
+      line-height: 160%;
+      margin-left: 0;
+      margin-bottom: 40px;
     }
   }
 
@@ -180,9 +238,18 @@ $bp5: 320;
     /* color-dark-s */
 
     color: #cdcdcd;
-    transition: all 0.3s ease 0s;
+    transition: all 0.8s ease 0s;
     &:hover {
       cursor: pointer;
+    }
+
+    @media (max-width: $bp4+px) {
+      font-family: "Arial";
+
+      font-size: 32px;
+      line-height: 160%;
+
+      color: #fafafa;
     }
   }
 }
@@ -852,10 +919,7 @@ $bp5: 320;
     margin-top: 40px;
     flex-wrap: wrap;
     @media (max-width: $bp3+px) {
-      
-     
       padding: 0 34px;
-      
     }
     @media (max-width: $bp4+px) {
       justify-content: center;
