--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -304,6 +304,20 @@ html {
   cursor: pointer;
 }
 
+.overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(41, 41, 41, 0.6);
+}
+
+.display-block {
+  display: block;
+}
+
 .footer {
   background: -webkit-gradient(linear, left top, right top, from(#5b483a), to(#262425));
   background: linear-gradient(to right, #5b483a, #262425);
