--- a/shelter/pages/pets/style.scss
+++ b/shelter/pages/pets/style.scss
@@ -187,6 +187,22 @@ $bp5: 320;
   }
 }
 
+
+.overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(41, 41, 41, 0.6);
+}
+
+.display-block {
+  display: block;
+}
+
+
 .footer {
   background: linear-gradient(to right, #5b483a, #262425);
   // .footer__container
