fix: fix slider

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -569,8 +569,8 @@ $bp5: 320;
 
 @media (max-width: $bp1+px) {
     @keyframes move-left {
-      from {left: -580px;}
-      to {left: 0px;}
+      from {left: -560px;}
+      to {left: 0;}
     }
   }
 
