--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -190,10 +190,6 @@ body {
   }
 }
 
-.header__container_active {
-  background: rgba(41, 41, 41, 0.6);
-}
-
 .header__logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -809,18 +805,18 @@ body {
 @media (max-width: 1279px) {
   @-webkit-keyframes move-left {
     from {
-      left: -580px;
+      left: -560px;
     }
     to {
-      left: 0px;
+      left: 0;
     }
   }
   @keyframes move-left {
     from {
-      left: -580px;
+      left: -560px;
     }
     to {
-      left: 0px;
+      left: 0;
     }
   }
 }
